8221853: Data race in compile broker (set_last_compile)

Remove the debug code provoking it

Reviewed-by: kvn, thartmann